apps/homeassistant/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
  annotations:
    volsync.backube/privileged-movers: "true"
