apps/homeassistant/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: homeassistant
    app.kubernetes.io/name: homeassistant
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: main
      app.kubernetes.io/instance: homeassistant
      app.kubernetes.io/name: homeassistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: main
        app.kubernetes.io/instance: homeassistant
        app.kubernetes.io/name: homeassistant
      annotations:
        k8s.v1.cni.cncf.io/networks: |-
          [
            {
              "name": "macvlan-conf-dhcp-sbr",
              "namespace": "kube-system",
              "mac": "4a:c1:8d:28:f2:77"
            }
          ]
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: TZ
          value: America/Denver
        image: ghcr.io/home-assistant/home-assistant:2026.10.0
        name: main
        resources:
          requests:
            cpu: 50m
            memory: 1Gi
        volumeMounts:
        - mountPath: /config
          name: media
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: homeassistant-pvc-replicated
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtl433
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rtl433
  template:
    metadata:
      labels:
        app: rtl433
    spec:
      hostname: rtl433
      containers:
        - name: rtl433
          image: hertzg/rtl_433:latest
          args:
            - "-c"
            - "/etc/rtl_433/rtl433.conf"
          volumeMounts:
            - name: config
              mountPath: /etc/rtl_433
          securityContext:
            privileged: true
      volumes:
        - name: config
          secret:
            secretName: rtl433-config
      nodeSelector:
        feature.node.kubernetes.io/usb-ff_0bda_2838.present: "true"
      tolerations:
        - key: hardware.invertedorigin.com/usb
          operator: Equal
          value: "true"
          effect: NoSchedule
