apps/homeassistant/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: homeassistant
    app.kubernetes.io/name: homeassistant
    app.kubernetes.io/service: homeassistant
  name: homeassistant
  namespace: homeassistant
spec:
  ports:
  - name: http
    port: 8123
    protocol: TCP
    targetPort: 8123
  selector:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: homeassistant
    app.kubernetes.io/name: homeassistant
  type: NodePort
