apps/homeassistant/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    external-dns.kubernetes.io/target: ingress.home.arpa
    external-dns.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, HEAD
  labels:
    app.kubernetes.io/instance: homeassistant
    app.kubernetes.io/name: homeassistant
    external-dns.invertedorigin.com/enabled: "true"
  name: homeassistant
  namespace: homeassistant
spec:
  ingressClassName: cilium
  rules:
  - host: ha.invertedorigin.com
    http:
      paths:
      - backend:
          service:
            name: homeassistant
            port:
              number: 8123
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ha.invertedorigin.com
    secretName: ha-tls-domain
